<resources>
    <string name="app_name">Adivaa Skin Care Clinic</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="reservation">Reservasi</string>
    <string name="medic_history">Riwayat Pasien</string>
    <string name="chat">Konsultasi</string>
    <string name="product">Produk</string>
    <string name="login">Login</string>
    <string name="ambil_nomor_antrian">Ambil Nomor Antrian</string>
    <string name="_14">14</string>
    <string name="nomor_antrian_saat_ini">Nomor Antrian Saat Ini</string>
    <string name="perawatan">Perawatan :</string>
    <string name="cuci_muka">Cuci Muka</string>
    <string name="kurang_lebih">Kurang lebih</string>
    <string name="silakan_datang_15_menit_sebelum_jam_periksa">Silakan datang 15 menit sebelum jam periksa</string>
    <string name="nomor_antrian">Nomor Antrian :</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_riwayat_pasien">RiwayatPasien</string>
    <string name="tab_text_1">Tab1</string>
    <string name="tab_text_2">Tab2</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_antrian_saat_ini">0</string>
    <string name="waktu_operasional">Waktu Operasional</string>
    <string name="jam_operasional">Senin-Sabtu : 09.00-17.00</string>
    <string name="nama_produk">Nama :</string>
</resources>
