<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ResevasiActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:padding="14dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TableRow
                    android:id="@+id/row0"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/colorAntrian"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/headerNoAntrian"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autoSizeMaxTextSize="20sp"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:text="@string/nomor_antrian_saat_ini"
                        android:textColor="@android:color/primary_text_light" />
                </TableRow>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/noAntrianSaatIni"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:text="2"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="100sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TableRow
                    android:id="@+id/row1"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@color/colorNamaPasien">

                    <TextView
                        android:id="@+id/namaPasienAntrian"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Pasien"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </TableRow>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="52dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textAntrian"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/nomor_antrian"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/antrianCust"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_toRightOf="@+id/textAntrian"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="4"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/textAntrian"
                        android:background="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_below="@+id/textAntrian"
                        android:paddingLeft="10dp"
                        app:srcCompat="@drawable/ic_access_time_black_24dp" />

                    <TextView
                        android:id="@+id/textPerkiraan"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_below="@+id/textAntrian"
                        android:layout_toRightOf="@+id/imageView"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="Silakan datang pada jam:"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/jam"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_below="@+id/textAntrian"
                        android:layout_toRightOf="@+id/textPerkiraan"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="2"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/lagi"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_below="@+id/textAntrian"
                        android:layout_toRightOf="@+id/jam"
                        android:gravity="center_vertical"
                        android:text=":00"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/penjelasan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:paddingLeft="5dp"
                        android:text="@string/silakan_datang_15_menit_sebelum_jam_periksa"
                        android:textSize="15dp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/penjelasan">

                <Button
                    android:id="@+id/buttonBantuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="Bantuan" />
            </RelativeLayout>

        </GridLayout>

    </LinearLayout>

</ScrollView>